# hci

./: .gitignore  HCI_SYSTEM_EQUATIONS.md  README.md  equations.md  infer.py  params.py  pyproject.toml  requirements.txt  test.py  train.py
dhed/: L0.py  L1.py  renderer.py  seed.py
hce/: L1.py  diagnostics_viz.py  renderer.py  seed.py
hci/: L0.py  L1.py  L2.py  diagnostics_viz.py  renderer.py  seed.py
pretrained/: final.pt
