[project]
name = "dhed"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "pillow>=12.1.0",
    "pyyaml>=6.0.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "kagglehub==1.0.0"
]

[tool.uv]
package = false
link-mode = "copy"

